# ctr-totp

./: CMakeLists.txt  Makefile  README.md
include/: misc.h  tests.h  udp.h
source/: NTPClock.cpp  NTPClock.h  TOTP.cpp  TOTP.h  base32.cpp  base32.h  hmac.cpp  hmac.h  main.cpp  misc.cpp  sha1.cpp  sha1.hpp  tests.cpp  totp.cpp  totp.h  udp.cpp
